--- a/biology.html
+++ b/biology.html
@@ -24,15 +24,15 @@ h1{
   font-size:50px;
 }
 body{
-  background:url('http://i.istockimg.com/file_thumbview_approve/74335433/5/stock-photo-74335433-anatomy-of-a-woman-on-black-with-clipping-path.jpg');
-  background-size:;
+  background:url('http://i.istockimg.com/file_thumbview_approve/47746598/5/stock-photo-47746598-digital-illustration-neurons.jpg');
+  background-size:contain;
   
 }
 ul{
-  background-color:black;
+  background-color:#0B4C5F;
 }
 footer{
-  background-color:black;
+  background-color:#0B4C5F;
 }
 </style>
 <ul class="nav nav-tabs">
@@ -45,6 +45,7 @@ footer{
   <li role="presentation"><a href="algebra.html" target="_self">Algebra</a></li>
   
 </ul>
+
 <h1>Script</h1>
 <iframe width="1000px" height="1000px" src="https://docs.google.com/document/d/1xT2N_8YfoYzevxTMbcxpHqKbQqToBKfU6YFaug4xGvE/pub?embedded=true"></iframe>
 <footer>
