--- a/biology.html
+++ b/biology.html
@@ -11,7 +11,7 @@
     <!--This files goes to the CSS page I provided for the landing page. You can Open it as an example, but DO NOT EDIT IT! Any changes should go on a different CSS document-->
   <link type="text/css" rel="stylesheet" href="stylesheets/style.css">
     <!--This file will be the one that you customize yourself, with your own code.-->
-  <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merienda' rel='stylesheet' type='text/css'>
       <!--This link is for the google fonts API, which lets you customize .-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--This makes the webpage check the size of the device it's on. This lets your page be mobile responsive-->
@@ -20,19 +20,20 @@
 <style>
 h1{
   text-align:center;
-  color:white;
+  color:#0101DF;
   font-size:50px;
 }
 body{
-  background:url('http://i.istockimg.com/file_thumbview_approve/47746598/5/stock-photo-47746598-digital-illustration-neurons.jpg');
-  background-size:contain;
+background: #0B0719;
+background-size:contain;
   
 }
 ul{
-  background-color:#0B4C5F;
+  background-color:#0101DF;
+  font:Georgia, serif;
 }
 footer{
-  background-color:#0B4C5F;
+  background-color:#0101DF;
 }
 </style>
 <ul class="nav nav-tabs">
@@ -43,11 +44,13 @@ footer{
   <li role="presentation"><a href="mma2.html" target="_self">MMA 2</a></li>
   <li role="presentation" class="active"><a href="biology.html" target="_self">Biology</a></li>
   <li role="presentation"><a href="algebra.html" target="_self">Algebra</a></li>
+  <li role="presentation"><a href="art.html" target="_self">Art</a></li>
   
 </ul>
 
 <h1>Script</h1>
 <iframe width="1000px" height="1000px" src="https://docs.google.com/document/d/1xT2N_8YfoYzevxTMbcxpHqKbQqToBKfU6YFaug4xGvE/pub?embedded=true"></iframe>
+<hr>
 <footer>
  <i>Devante Jordan 2015 ©</i>
     
