--- a/biology.html
+++ b/biology.html
@@ -29,11 +29,11 @@ background-size:contain;
   
 }
 ul{
-  background-color:#0101DF;
+  background-color:#5F04B4;
   font:Georgia, serif;
 }
 footer{
-  background-color:#0101DF;
+  background-color:#5F04B4;
 }
 </style>
 <ul class="nav nav-tabs">
